pipeline/deploy/market/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
  name: ${K8S_INGRESS_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  ingressClassName: nginx
  rules:
  - host: ${K8S_INGRESS_DNS_NAME}
    http:
      paths:
      - backend:
          service:
            name: ${K8S_SERVICE_NAME}
            port:
              number: ${K8S_SERVICE_PORT}
        path: /
        pathType: Prefix
